# ConciliadorBancarioAgent

./: .gitignore  README.md  app.py  project_specs.md  pyproject.toml
.claude/: settings.local.json
agents/: conciliador_bancario.py
agents/workflow/: __init__.py  graph.py  nodes.py  state.py
models/: conciliacao.py
tests/: test_data_generator.py
tests/exemplos/: transacoes_divergencias_20250813_112247.json  transacoes_lote_20250813_112247.json  transacoes_normais_20250813_112247.json  transacoes_parceladas_20250813_112247.json  transacoes_retencao_20250813_112247.json
